--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 	<title>Document</title>
 </head>
 <body>
-	hello!
+	<ul>
+		<li>Первый проект: <a href="https://ig-51.github.io/WebDesignGoPro/" target="_blank">WebDesignGoPro</a>
+	</ul>
 </body>
 </html>
