--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<title>Document</title>
 </head>
 <body>
+	<h1>Мои проекты</h1>
 	<ul>
 		<li>Первый проект: <a href="https://ig-51.github.io/WebDesignGoPro/" target="_blank">WebDesignGoPro</a>
 	</ul>
