--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 	<title>Document</title>
 </head>
 <body>
-	<h1>Мои проекты</h1>
+	<h1>Мои проекты:</h1>
 	<ul>
-		<li>Первый проект: <a href="https://ig-51.github.io/WebDesignGoPro/" target="_blank">WebDesignGoPro</a>
+		<li>Первый проект - <a href="https://ig-51.github.io/WebDesignGoPro/" target="_blank">WebDesignGoPro</a>
 	</ul>
 </body>
 </html>
