--- a/WebDesignGoPro/index.html
+++ b/WebDesignGoPro/index.html
@@ -13,7 +13,7 @@
 <body>
 
 	<header>
-		<div class="wrapper">
+		<div class="wrapper clearfix">
 			<div class="header__logo">
 				<a href=""><img src="img/logo.png" alt="logo"></a>
 			</div>
