--- a/index.html
+++ b/index.html
@@ -2,12 +2,36 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>My Projects</title>
+  <title>Портфолио</title>
+  <style>
+  body {
+    position: relative;
+    background: silver;
+    color: #333;
+  }
+  p {
+    margin: 0;
+  }
+  ul>li {
+    margin-bottom: 20px;
+  }
+  .content {
+    height: 3000px;
+  }
+  </style>
 </head>
 <body>
-	<h1>Мои проекты:</h1>
-	<ul>
-		<li>Первый проект - <a href="https://ig-51.github.io/WebDesignGoPro/" target="_blank">WebDesignGoPro</a>
-	</ul>
+	<section class="content">
+    <h1>Выполненные работы</h1>
+    <ul>
+      <li>
+        <p>Верстка psd макета 1 - <a href="https://ig-51.github.io/WebDesignGoPro/">WebDesignGoPro</a></p>
+        <p>Стек: html, css, flexbox, javascript, bem.</p>
+      </li>
+      <li><p>Верстка psd макета 2 - <a href="#">Unknown</a></p>
+        <p>Стек: html, sass, bootstrap</p>
+      </li>
+    </ul>
+  </section>
 </body>
 </html>
