--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </head>
 <body>
 	<section class="content">
-    <h1>Выполненные работы</h1>
+    <h1>Портфолио</h1>
     <ul>
       <li>
         <p>Верстка psd макета 1 - <a href="https://ig-51.github.io/WebDesignGoPro/">WebDesignGoPro</a></p>
