--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
     <h1>Портфолио</h1>
     <ul>
       <li>
-        <p>Верстка psd макета 1 - <a href="https://ig-51.github.io/WebDesignGoPro/">WebDesignGoPro</a></p>
+        <p>Верстка psd макета - <a href="https://ig-51.github.io/WebDesignGoPro/">WebDesignGoPro</a></p>
         <p>Стек: html, css, flexbox, javascript, bem.</p>
       </li>
-      <li><p>Верстка psd макета 2 - <a href="#">Unknown</a></p>
+      <li><p>Верстка psd макета - <a href="#">Unknown</a></p>
         <p>Стек: html, sass, bootstrap</p>
       </li>
     </ul>
