--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
     <ul>
       <li>
         <p>Верстка psd макета - <a href="https://ig-51.github.io/WebDesignGoPro/">WebDesignGoPro</a></p>
-        <p>Стек: html, css, flexbox, javascript, bem.</p>
+        <p>Стек: html, css, flexbox, bem, javascript.</p>
       </li>
-      <li><p>Верстка psd макета - <a href="#">Unknown</a></p>
-        <p>Стек: html, sass, bootstrap</p>
+      <li><p>Верстка psd макета - <a href="https://ig-51.github.io/LandingZap/">LandingZap</a></p>
+        <p>Стек: html, css, bem, flexbox.</p>
       </li>
     </ul>
   </section>
