--- a/LandingZap/index.html
+++ b/LandingZap/index.html
@@ -161,7 +161,8 @@
       <h2 class="headingH1H2 areYouReady__heading">Are You Ready To Get The Best Landing Page Design Ever?</h2>
       <a href="javascript: void(0)" class="buttonGet areYouReady__button">Get your landing page now</a>
       <div class="areYouReady__imgWrapper">
-        <img src="img/areYourReadyNotebook.png" alt="notebook" class="areYouReady__imgNotebook">
+        <img src="img/areYouReadyNotebook.png" alt="notebook" class="areYouReady__imgNotebook">
+        
       </div>
     </div>
   </section>
