--- a/LandingZap/index.html
+++ b/LandingZap/index.html
@@ -11,6 +11,10 @@
 </head>
 
 <body>
+  	<div class="btnback">
+        <a href="/">◀ Вернуться к портфолио</a>
+      </div>
+      
   <section class="landingZap">
     <div class="wrapper">
       <a href="javascript: void(0)">
