--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
       <li><p>Верстка psd макета - <a href="https://ig-51.github.io/LandingZap/">LandingZap</a></p>
         <p>Стек: html, css, bem, flexbox.</p>
       </li>
+      <li><p>Верстка psd макета - <a href="https://ig-51.github.io/Egwineco/">Egwineco</a></p>
+        <p>Стек: html, css, bem, flexbox.</p>
+	<p>Библиотеки: fullPage.js, wow.js, animate.css</p>
+      </li>
     </ul>
   </section>
 </body>
