--- a/Egwineco/index.html
+++ b/Egwineco/index.html
@@ -116,7 +116,7 @@
   </div>
 
 
-  <script src="ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
   <script type="text/javascript" src="libs/jquery.fullPage.js"></script>
   <script src="libs/wow.min.js"></script>
   <script src="js/scripts.js"></script>
