--- a/Egwineco/index.html
+++ b/Egwineco/index.html
@@ -13,6 +13,9 @@
 
 
 <body>
+  <div class="btnback">
+      <a href="/">◀ Вернуться к портфолио</a>
+    </div>
   <div id="fullpage">
     <!-- chardonnay -->
     <div class="section chardonnay">
