--- a/WebDesignGoPro/index.html
+++ b/WebDesignGoPro/index.html
@@ -26,7 +26,7 @@
 						<span class="hamburger-inner"></span>
 					</span>
 				</button>
-				<ul>
+				<ul class="header__nav">
 					<li class="active"><a href="javascript:void(0)" class="header__link">Home</a></li>
 					<li><a href="javascript:void(0)" class="header__link">Services</a></li>
 					<li><a href="javascript:void(0)" class="header__link">Portfolio</a></li>
