--- a/LandingZap/index.html
+++ b/LandingZap/index.html
@@ -7,14 +7,17 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>landingZap</title>
   <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
+
+  <link rel="stylesheet" type="text/css" href="libs/slick.css" />
+
   <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
-  	<div class="btnback">
-        <a href="/">◀ Вернуться к портфолио</a>
-      </div>
-      
+  <div class="btnback">
+    <a href="/">◀ Вернуться к портфолио</a>
+  </div>
+
   <section class="landingZap">
     <div class="wrapper">
       <a href="javascript: void(0)">
@@ -154,6 +157,21 @@
             <p class="testimonial__client">JOHN TRAVOLTA</p>
             <p class="testimonial__position">Co-Founder at Apple Studio</p>
           </div>
+          <div class="testimonial" style="background-color: silver;">
+            <p class="testimonial__paragraph">‘Grab their attention! Your landing page will have a clear, concise action that your visitors will take, which
+              will eventually turn them into customers and grow your revenue.’</p>
+            <img src="img/client1.png" alt="client1" class="testimonial__clientImg">
+            <p class="testimonial__client">Madalin Duca</p>
+            <p class="testimonial__position">Co-Founder at landingZap</p>
+          </div>
+          <div class="testimonial" style="background-color: silver;">
+            <p class="testimonial__paragraph">‘Grab their attention! Your landing page will have a clear, concise action that your visitors will take, which
+              will eventually turn them into customers and grow your revenue.’</p>
+            <img src="img/client2.png" alt="client1" class="testimonial__clientImg">
+            <p class="testimonial__client">JOHN TRAVOLTA</p>
+            <p class="testimonial__position">Co-Founder at Apple Studio</p>
+          </div>
+
         </div>
       </div>
     </div>
@@ -166,11 +184,16 @@
       <a href="javascript: void(0)" class="buttonGet areYouReady__button">Get your landing page now</a>
       <div class="areYouReady__imgWrapper">
         <img src="img/areYouReadyNotebook.png" alt="notebook" class="areYouReady__imgNotebook">
-        
+
       </div>
     </div>
   </section>
 
+
+  <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
+  <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+  <script type="text/javascript" src="libs/slick.min.js"></script>
+  <script src="js/scripts.js"></script>
 </body>
 
 </html>
