--- a/WebDesignGoPro/index.html
+++ b/WebDesignGoPro/index.html
@@ -6,7 +6,8 @@
 	<title>Web Design 2018</title>
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600|Roboto:400,400i" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hamburgers/0.9.3/hamburgers.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hamburgers/0.9.3/hamburgers.min.css">
+  <link rel="stylesheet" type="text/css" href="libs/slick.css" />
 	<link rel="stylesheet" href="css/style.css">
 	<script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
 </head>
@@ -42,11 +43,6 @@
 			<h1>Always a step ahead<br>GO PRO</h1>
 			<a href="javascript:void(0)">Learn More</a>
 		</div>
-		<ul class="banner__rhombs">
-			<li><a href="javascript:void(0)"><i class="fas fa-square-full banner__icon"></i></a></li>
-			<li><a href="javascript:void(0)"><i class="fas fa-square-full banner__icon active"></i></a></li>
-			<li><a href="javascript:void(0)"><i class="fas fa-square-full banner__icon"></i></a></li>
-		</ul>
 	</section>
 
 
@@ -150,12 +146,19 @@
 							<img src="img/face.png" alt="face">
 						</div>
 						<p>Designing is a matter of concentration. You go deep into what you want to do. It's&nbspabout intensive research, really. The concentration is warm and&nbspintimate and like</p>
-					</div>
-					<ul class="slider__rhombs">
-						<li><a href="javascript:void(0)"><i class="fas fa-square-full slider__icon"></i></a></li>
-						<li><a href="javascript:void(0)"><i class="fas fa-square-full slider__icon active"></i></a></li>
-						<li><a href="javascript:void(0)"><i class="fas fa-square-full slider__icon"></i></a></li>
-					</ul>
+          </div>
+          <div class="slider__block">
+						<div class="slider__img">
+							<img src="img/face2.png" alt="face">
+						</div>
+						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro ipsum cupiditate magnam sapiente. Atque, iusto omnis voluptates tenetur provident distinctio voluptate quas animi sunt, reiciendis dict.</p>
+          </div>
+          <div class="slider__block">
+						<div class="slider__img">
+							<img src="img/face3.png" alt="face">
+						</div>
+						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora laudantium necessitatibus error debitis quaerat harum, minus soluta magni id in quo, vero, alias officiis quod commodi labore. Unde.</p>
+          </div>
 				</div>
 			</div>
 		</section>
@@ -280,7 +283,10 @@
 		</footer>
 
 		<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
+    <!-- <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script> -->
+    <script type="text/javascript" src="libs/slick.min.js"></script>
 		<script src="js/script.js"></script>
 	</body>
 	</html>
