--- a/index.html
+++ b/index.html
@@ -21,20 +21,12 @@
   </style>
 </head>
 <body>
-	<section class="content">
+  <section class="content">
     <h1>Портфолио</h1>
     <ul>
-      <li>
-        <p>Верстка psd макета - <a href="https://ig-51.github.io/WebDesignGoPro/">WebDesignGoPro</a></p>
-        <p>Стек: html, css, flexbox, bem, javascript.</p>
-      </li>
-      <li><p>Верстка psd макета - <a href="https://ig-51.github.io/LandingZap/">LandingZap</a></p>
-        <p>Стек: html, css, bem, flexbox.</p>
-      </li>
-      <li><p>Верстка psd макета - <a href="https://ig-51.github.io/Egwineco/">Egwineco</a></p>
-        <p>Стек: html, css, bem, flexbox.</p>
-	<p>Библиотеки: fullPage.js, wow.js, animate.css</p>
-      </li>
+      <li><p>Верстка PSD макета - <a href="https://ig-51.github.io/WebDesignGoPro/">WebDesignGoPro</a></p></li>
+      <li><p>Верстка PSD макета - <a href="https://ig-51.github.io/LandingZap/">LandingZap</a></p></li>
+      <li><p>Верстка PSD макета - <a href="https://ig-51.github.io/Egwineco/">Egwineco</a></p></li>
     </ul>
   </section>
 </body>
