--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
   <section class="content">
     <h1>Портфолио</h1>
     <ul>
-      <li><p>Верстка PSD макета - <a href="https://ig-51.github.io/WebDesignGoPro/">WebDesignGoPro</a></p></li>
-      <li><p>Верстка PSD макета - <a href="https://ig-51.github.io/LandingZap/">LandingZap</a></p></li>
-      <li><p>Верстка PSD макета - <a href="https://ig-51.github.io/Egwineco/">Egwineco</a></p></li>
+      <li><p><a href="https://ig-51.github.io/WebDesignGoPro/">WebDesignGoPro</a></p></li>
+      <li><p><a href="https://ig-51.github.io/LandingZap/">LandingZap</a></p></li>
+      <li><p><a href="https://ig-51.github.io/Egwineco/">Egwineco</a></p></li>
     </ul>
   </section>
 </body>
