--- a/index.html
+++ b/index.html
@@ -22,11 +22,18 @@
 </head>
 <body>
   <section class="content">
-    <h1>Портфолио</h1>
+    <h1>Вёрстка и интеграция в cms</h1>
     <ul>
-      <li><p><a href="https://ig-51.github.io/WebDesignGoPro/">WebDesignGoPro</a></p></li>
-      <li><p><a href="https://ig-51.github.io/LandingZap/">LandingZap</a></p></li>
-      <li><p><a href="https://ig-51.github.io/Egwineco/">Egwineco</a></p></li>
+<!--       <li><p><a href="https://ig-51.github.io/WebDesignGoPro/">WebDesignGoPro</a></p></li> -->
+<!--       <li><p><a href="https://ig-51.github.io/LandingZap/">LandingZap</a></p></li> -->
+<!--       <li><p><a href="https://ig-51.github.io/Egwineco/">Egwineco</a></p></li> -->
+	    <li><p><a href="https://filigranika.ru/">filigranika</a></p></li>
+	    <li><p><a href="https://lider-isk.ru/">lider-isk</a></p></li>
+	    <li><p><a href="https://defence33.ru/"defence33></a></p></li>
+	    <li><p><a href="https://intelligentzia.ru/https://intelligentzia.ru">intelligentzia</a></p></li>
+	    <li><p><a href="https://rpgagency.ru/https://rpgagency.ru">rpgagency</a></p></li>
+	    <li><p><a href="http://intek-tool.ru/http://intek-tool.ru">intek-tool</a></p></li>
+
     </ul>
   </section>
 </body>
