--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-  <title>Портфолио</title>
+  <title>Portfolio</title>
   <style>
   body {
     position: relative;
