--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
 	    <li><p><a href="https://filigranika.ru/">filigranika</a></p></li>
 	    <li><p><a href="https://lider-isk.ru/">lider-isk</a></p></li>
 	    <li><p><a href="https://defence33.ru/"defence33></a></p></li>
-	    <li><p><a href="https://intelligentzia.ru/https://intelligentzia.ru">intelligentzia</a></p></li>
-	    <li><p><a href="https://rpgagency.ru/https://rpgagency.ru">rpgagency</a></p></li>
-	    <li><p><a href="http://intek-tool.ru/http://intek-tool.ru">intek-tool</a></p></li>
+	    <li><p><a href="https://intelligentzia.ru">intelligentzia</a></p></li>
+	    <li><p><a href="https://rpgagency.ru">rpgagency</a></p></li>
+	    <li><p><a href="http://intek-tool.ru">intek-tool</a></p></li>
 
     </ul>
   </section>
