--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 	    <li><p><a href="https://intelligentzia.ru">intelligentzia</a></p></li>
 	    <li><p><a href="https://rpgagency.ru">rpgagency</a></p></li>
 	    <li><p><a href="http://intek-tool.ru">intek-tool</a></p></li>
+	    <li><p><a href="https://grantewine.aznar.az/">grantewine</a></p></li>
     </ul>
   </section>
 </body>
