--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
 <!--       <li><p><a href="https://ig-51.github.io/WebDesignGoPro/">WebDesignGoPro</a></p></li> -->
 <!--       <li><p><a href="https://ig-51.github.io/LandingZap/">LandingZap</a></p></li> -->
 <!--       <li><p><a href="https://ig-51.github.io/Egwineco/">Egwineco</a></p></li> -->
-	    <li><p><a href="https://filigranika.ru/">filigranika</a></p></li>
-	    <li><p><a href="https://lider-isk.ru/">lider-isk</a></p></li>
-	    <li><p><a href="https://defence33.ru/">defence33</a></p></li>
-	    <li><p><a href="https://intelligentzia.ru">intelligentzia</a></p></li>
-	    <li><p><a href="https://rpgagency.ru">rpgagency</a></p></li>
-	    <li><p><a href="http://intek-tool.ru">intek-tool</a></p></li>
-	    <li><p><a href="https://grantewine.aznar.az/">grantewine</a></p></li>
+	    <li><p><a href="https://filigranika.ru/" target="_blank">filigranika</a></p></li>
+	    <li><p><a href="https://lider-isk.ru/" target="_blank">lider-isk</a></p></li>
+	    <li><p><a href="https://defence33.ru/" target="_blank">defence33</a></p></li>
+	    <li><p><a href="https://intelligentzia.ru" target="_blank">intelligentzia</a></p></li>
+	    <li><p><a href="https://rpgagency.ru" target="_blank">rpgagency</a></p></li>
+	    <li><p><a href="http://intek-tool.ru" target="_blank">intek-tool</a></p></li>
+	    <li><p><a href="https://grantewine.aznar.az/" target="_blank">grantewine</a></p></li>
     </ul>
   </section>
 </body>
